--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,14 @@
-html{
+html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after{
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
-body{
+body {
   padding: 0;
   margin: 0;
   background-color: lightgrey;
@@ -16,16 +18,16 @@ body{
   height: 100vh;
 }
 
-main{
-  height: fit-content;
-  max-height: 70vh;
+main {
+  height: auto;
+  max-height: 70%;
   width: 40%;
   margin: 0 auto;
   background-color: rgb(243, 243, 243);
-  box-shadow: 0px 0px 5px #888888;
+  box-shadow: 0 0 5px #888;
 }
 
-.list__title{
+.list__title {
   font-size: 1rem;
   font-weight: normal;
   margin: 0;
@@ -33,37 +35,34 @@ main{
   border: 0.5px solid lightgray;
 }
 
-.list{
+.list {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.list__item{
+.list__item {
   padding: 10px 10px;
   border: 0.2px solid lightgray;
   display: flex;
   gap: 10px;
 }
 
-.list__task{
+.list__task {
   background-color: inherit;
   border: none;
   font-style: italic;
   padding: 5px;
 }
 
-.list__text{
+.list__text {
   background-color: inherit;
   border: none;
 }
 
-.list__button{
+.list__button {
   background-color: rgb(218, 218, 218);
   border: none;
   width: 100%;
   padding: 15px;
 }
-
-
-
