--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,7 @@ form {
   justify-content: space-between;
   align-items: center;
   gap: 10px;
+  transition: background-color 0.4s ease-in-out;
 }
 
 form {
