Add status update for completed tasks

--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,11 @@ form {
   max-width: 5%;
 }
 
+.list__checkbox:checked + .list__text{
+  color: #888;
+  text-decoration: line-through;
+}
+
 .list__task {
   background-color: inherit;
   border: none;
